39. Messaging module: Adding Listener implementations